--- a/index.html
+++ b/index.html
@@ -5,73 +5,98 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Recipe page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Simple Omelette Recipe
+  <section class="container">
+    <article class="card">
+      <header class="card-header">
+        <img src="/assets/images/image-omelette.jpeg" alt="omelette">
+        <h1 class="title">Simple Omelette Recipe</h1>
+        <p class="description"> An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+          to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+          <div class="preparation-time">
+            <h3 class="title-preparation">Preparation time</h3>
+            <ul class="preparation-ul">
+              <li class="li-preparation total"><strong>Total:</strong>  Approximately 10 minutes </li>
+              <li class="li-preparation preparation"><strong>Preparation:</strong> 5 minutes</li>
+              <li class="li-preparation cooking"><strong>Cooking:</strong> 5 minutes</li>
+            </ul>
+          </div>
+         
+          <div class="ingredients">
+            <h1 class="title-ingredients">Ingredients</h1>
 
-  Preparation time
-
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
-
-  Ingredients
-
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
-
-  Instructions
-
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
-
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
-
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
-
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
-
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
-
-  Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+            <ul class="ingredients-ul">
+              <li class="li-ingredient ingredient-one">2-3 large eggs</li>
+              <li class="li-ingredient ingredient-two">Salt, to taste</li>
+              <li class="li-ingredient ingredient-three">Pepper, to taste</li>
+              <li class="li-ingredient ingredient-four">1 tablespoon of butter or oil</li>
+              <li class="li-ingredient ingredient-five">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+            </ul>
+          </div>
+      
+      </header>
+      <section class="card-body">
+        <h1 class="title-intructions">Instructions</h1>
+        <ol class="instructions">
+          <li class="intruction-li">
+            <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+            You can add a tablespoon of water or milk for a fluffier texture.
+          </li>
+          <li class="intruction-li">
+            <strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.
+          </li>
+          <li class="intruction-li">
+           <strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+            the eggs evenly coat the surface.
+          </li>
+          <li class="intruction-li">
+            <strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the 
+            middle, sprinkle your chosen fillings over one half of the omelette.
+          </li>
+          <li class="intruction-li">
+            <strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the 
+            fillings. Let it cook for another minute, then slide it onto a plate.
+          </li>
+          <li class="intruction-li">
+            <strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.
+          </li>
+        </ol>
+      </section>
+      <footer class="card-footer">
+        <h1 class="title-nutrition">Nutrition</h1>
+        <p class="description-nutrition">The table below shows nutritional values per serving without the additional fillings.</p>
+        <div class="container1">
+          <div class="content1">
+            <p class="name">Calories</p>
+            <p class="result">277kcal</p>
+          </div>
+        </div>
+        <div class="container2">
+          <div class="content2">
+            <p class="name">Carbs</p>
+            <p class="result">0g</p>
+          </div>
+        </div>
+        <div class="container3">
+          <div class="content3 ">
+            <p class="name">Protein</p>
+            <p class="result">20g</p>
+          </div>
+        </div>
+        <div class="container4">
+          <div class="content4">
+            <p class="name">Fat</p>
+            <p class="result">22g</p>
+          </div>
+        </div>
+      </footer>
+    </article>
+  </section>
 </body>
 </html>
